add ticket index

--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -1,15 +1,27 @@
 {
-  "Email address": "Emailová adresa",
-  "Password": "Heslo",
-  "Password confirmation": "Potvrzení hesla",
-  "Login": "Přihlásit",
-  "Logout": "Odhlásit",
-  "Close": "Zavřít",
-  "Name": "Jméno",
-  "Register": "Registrovat",
-  "Users": "Uživatelé",
-  "Roles": "Role",
-  "Are you sure ?": "Jste si jistý",
-  "Dashboard": "Hlavní panel",
-  "Back": "Zpět"
+    "Email address": "Emailová adresa",
+    "Password": "Heslo",
+    "Password confirmation": "Potvrzení hesla",
+    "Login": "Přihlásit",
+    "Logout": "Odhlásit",
+    "Close": "Zavřít",
+    "Name": "Jméno",
+    "Register": "Registrovat",
+    "Users": "Uživatelé",
+    "Roles": "Role",
+    "Are you sure ?": "Jste si jistý",
+    "Dashboard": "Hlavní panel",
+    "Back": "Zpět",
+    "I have": "mám",
+    "I have a problem with": "mám problém s",
+    "I need": "požaduji",
+    "I need servis": "požaduji servis",
+    "I need service": "požaduji službu",
+    "computer": "Počítačem",
+    "printer": "Tiskárnou",
+    "maintenance service": "pracovníka údržby",
+    "cleaning service": "úklidové služby",
+    "reception": "recepční",
+    "medical device": "zravotnického prostředku",
+    "suggestion for improvement": "námět na zlepšení"
 }
