Finish index buttons responsive

--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -9,6 +9,11 @@
     "Register": "Registrovat",
     "Users": "Uživatelé",
     "Roles": "Role",
+    "Create": "Vytvořit",
+    "Edit": "Upravit",
+    "Update": "Aktualizovat",
+    "Show": "Zobrazit",
+    "Delete": "Odstranit",
     "Are you sure ?": "Jste si jistý",
     "Dashboard": "Hlavní panel",
     "Back": "Zpět",
