--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -1,5 +1,6 @@
 {
     "Email address": "Emailová adresa",
+    "Email": "Emailová adresa",
     "Password": "Heslo",
     "Password confirmation": "Potvrzení hesla",
     "Login": "Přihlásit",
@@ -17,16 +18,27 @@
     "Are you sure ?": "Jste si jistý",
     "Dashboard": "Hlavní panel",
     "Back": "Zpět",
+    "Send": "Odeslat",
     "I have": "mám",
     "I have a problem with": "mám problém s",
     "I need": "požaduji",
     "I need servis": "požaduji servis",
     "I need service": "požaduji službu",
-    "computer": "Počítačem",
-    "printer": "Tiskárnou",
-    "maintenance service": "pracovníka údržby",
+    "I have suggestion": "mám námět",
+    "computer": "počítačem",
+    "printer": "tiskárnou",
+    "Printer": "Tiskárna",
+    "maintenance": "údržby",
     "cleaning service": "úklidové služby",
     "reception": "recepční",
     "medical device": "zravotnického prostředku",
-    "suggestion for improvement": "námět na zlepšení"
+    "for improvement": "na zlepšení",
+    "Computer": "Počítač",
+    "Personal number": "Osobní číslo",
+    "Computer ID": "ID počítače",
+    "Issue": "Problém",
+    "Title": "Předmět",
+    "Ticket": "Servisní požadavek",
+    "Printer IN": "Inv.č. Tiskárny",
+    "If you register, you will not need to re-enter your personal information.": "Pokud se zaregistrujete, nebudete muset opětovně zadávat osobní údaje."
 }
