Add sweetalert and Gates

--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -1,56 +1,61 @@
 {
+    "Access denied": "Přístup zamítnut",
+    "Are you sure ?": "Jste si jistý",
+    "Back": "Zpět",
+    "Close": "Zavřít",
+    "Computer ID": "ID počítače",
+    "Computer": "Počítač",
+    "Create": "Vytvořit",
+    "Created At": "Vytvořeno",
+    "Dashboard": "Hlavní panel",
+    "Delete": "Odstranit",
+    "Deleted": "Odstraněno",
+    "Edit": "Upravit",
+    "Electro": "Elektro",
     "Email address": "Emailová adresa",
     "Email": "Emailová adresa",
-    "Personal Number": "Osobní číslo",
-    "Password": "Heslo",
-    "Password confirmation": "Potvrzení hesla",
+    "Fault type": "Typ závady",
+    "I have a problem with": "mám problém s",
+    "I have an idea for improvement": "Mám nápad na zlepšení",
+    "I have suggestion": "mám námět",
+    "I have": "mám",
+    "I need service": "požaduji službu",
+    "I need servis": "požaduji servis",
+    "I need": "požaduji",
+    "IT department": "oddělení IT",
+    "Idea": "Nápad",
+    "If you register, you will not have to re-enter your personal information and you will see the history of your requests.": "Pokud se zaregistrujete, nebudete muset opětovně zadávat osobní údaje a uvidíte historii svých požadavků.",
+    "Improvement": "Zepšení",
+    "Issue": "Problém",
     "Login": "Přihlásit",
     "Logout": "Odhlásit",
-    "Close": "Zavřít",
     "Name": "Jméno",
-    "Register": "Registrovat",
-    "Users": "Uživatelé",
-    "Roles": "Role",
-    "Create": "Vytvořit",
-    "Edit": "Upravit",
-    "Update": "Aktualizovat",
-    "Show": "Zobrazit",
-    "Delete": "Odstranit",
-    "Are you sure ?": "Jste si jistý",
-    "Dashboard": "Hlavní panel",
-    "Back": "Zpět",
-    "Send": "Odeslat",
-    "I have": "mám",
-    "I have a problem with": "mám problém s",
-    "I need": "požaduji",
-    "I need servis": "požaduji servis",
-    "I need service": "požaduji službu",
-    "I have suggestion": "mám námět",
-    "computer": "počítačem",
-    "printer": "tiskárnou",
-    "Printer": "Tiskárna",
-    "for": "na",
-    "Fault type": "Typ závady",
-    "maintenance department": "oddělení údržby",
-    "IT department": "oddělení IT",
-    "cleaning service": "úklidové služby",
-    "reception": "recepční",
-    "medical device": "zravotnického prostředku",
-    "for improvement": "na zlepšení",
-    "Computer": "Počítač",
+    "Password confirmation": "Potvrzení hesla",
+    "Password": "Heslo",
+    "Personal Number": "Osobní číslo",
     "Personal number": "Osobní číslo",
-    "Computer ID": "ID počítače",
-    "Issue": "Problém",
     "Phone": "Telefon",
-    "Title": "Předmět",
-    "Ticket": "Servisní požadavek",
     "Printer IN": "Inv.č. Tiskárny",
-    "Water": "Voda",
-    "Electro": "Elektro",
+    "Printer": "Tiskárna",
+    "Profile": "Profil",
+    "Register": "Registrovat",
+    "Roles": "Role",
     "Select the fault type": "Vyberte typ závady",
+    "Send": "Odeslat",
+    "Show": "Zobrazit",
+    "Ticket": "Servisní požadavek",
+    "Title": "Předmět",
+    "Update": "Aktualizovat",
+    "Updated At": "Aktualizováno",
+    "Users": "Uživatelé",
+    "Water": "Voda",
     "administrator of hospital resources": "správce nemocničních prostředeků",
-    "I have an idea for improvement": "Mám nápad na zlepšení",
-    "Idea": "Nápad",
-    "Improvement": "Zepšení",
-    "If you register, you will not have to re-enter your personal information and you will see the history of your requests.": "Pokud se zaregistrujete, nebudete muset opětovně zadávat osobní údaje a uvidíte historii svých požadavků."
+    "cleaning service": "úklidové služby",
+    "computer": "počítačem",
+    "for improvement": "na zlepšení",
+    "for": "na",
+    "maintenance department": "oddělení údržby",
+    "medical device": "zravotnického prostředku",
+    "printer": "tiskárnou",
+    "reception": "recepční"
 }
