Finished helpdesk user indexpage frontend

--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -29,6 +29,7 @@
     "Issue": "Problém",
     "Login": "Přihlásit",
     "Logout": "Odhlásit",
+    "Tickets": "Tikety",
     "Name": "Jméno",
     "Password confirmation": "Potvrzení hesla",
     "Password": "Heslo",
