Finished helpdesk user indexpage frontend

--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -6,6 +6,7 @@
     "Computer ID": "ID počítače",
     "Computer": "Počítač",
     "Create": "Vytvořit",
+    "Created": "Vytvořeno",
     "Created At": "Vytvořeno",
     "Dashboard": "Hlavní panel",
     "Delete": "Odstranit",
@@ -47,6 +48,7 @@
     "Ticket": "Servisní požadavek",
     "Title": "Předmět",
     "Update": "Aktualizovat",
+    "Updated": "Aktualizováno",
     "Updated At": "Aktualizováno",
     "Users": "Uživatelé",
     "Water": "Voda",
