--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -1,64 +1,61 @@
 {
-    "Access denied": "Přístup zamítnut",
-    "Are you sure ?": "Jste si jistý",
-    "Back": "Zpět",
-    "Close": "Zavřít",
-    "Computer ID": "ID počítače",
-    "Computer": "Počítač",
-    "Create": "Vytvořit",
-    "Created": "Vytvořeno",
-    "Created At": "Vytvořeno",
-    "Dashboard": "Hlavní panel",
-    "Delete": "Odstranit",
-    "Deleted": "Odstraněno",
-    "Edit": "Upravit",
-    "Electro": "Elektro",
-    "Email address": "Emailová adresa",
-    "Email": "Emailová adresa",
-    "Fault type": "Typ závady",
-    "I have a problem with": "mám problém s",
-    "I have an idea for improvement": "Mám nápad na zlepšení",
-    "I have suggestion": "mám námět",
-    "I have": "mám",
-    "I need service": "požaduji službu",
-    "I need servis": "požaduji servis",
-    "I need": "požaduji",
-    "IT department": "oddělení IT",
-    "Idea": "Nápad",
-    "If you register, you will not have to re-enter your personal information and you will see the history of your requests.": "Pokud se zaregistrujete, nebudete muset opětovně zadávat osobní údaje a uvidíte historii svých požadavků.",
-    "Improvement": "Zepšení",
-    "Issue": "Problém",
-    "Login": "Přihlásit",
-    "Logout": "Odhlásit",
-    "Tickets": "Tikety",
-    "Name": "Jméno",
-    "Password confirmation": "Potvrzení hesla",
-    "Password": "Heslo",
-    "Personal Number": "Osobní číslo",
-    "Personal number": "Osobní číslo",
-    "Phone": "Telefon",
-    "Printer IN": "Inv.č. Tiskárny",
-    "Printer": "Tiskárna",
-    "Profile": "Profil",
-    "Register": "Registrovat",
-    "Roles": "Role",
-    "Select the fault type": "Vyberte typ závady",
-    "Send": "Odeslat",
-    "Show": "Zobrazit",
-    "Ticket": "Servisní požadavek",
-    "Title": "Předmět",
-    "Update": "Aktualizovat",
-    "Updated": "Aktualizováno",
-    "Updated At": "Aktualizováno",
-    "Users": "Uživatelé",
-    "Water": "Voda",
-    "administrator of hospital resources": "správce nemocničních prostředeků",
-    "cleaning service": "úklidové služby",
-    "computer": "počítačem",
-    "for improvement": "na zlepšení",
-    "for": "na",
-    "maintenance department": "oddělení údržby",
-    "medical device": "zravotnického prostředku",
-    "printer": "tiskárnou",
-    "reception": "recepční"
+  "Access denied": "Přístup zamítnut",
+  "Are you sure ?": "Jste si jistý",
+  "Back": "Zpět",
+  "Close": "Zavřít",
+  "Computer ID": "ID počítače",
+  "Computer": "Počítač",
+  "Create": "Vytvořit",
+  "Created": "Vytvořeno",
+  "Created At": "Vytvořeno",
+  "Dashboard": "Hlavní panel",
+  "Delete": "Odstranit",
+  "Deleted": "Odstraněno",
+  "Edit": "Upravit",
+  "Electro": "Elektro",
+  "Email address": "Emailová adresa",
+  "Email": "Emailová adresa",
+  "Fault type": "Typ závady",
+  "Suggestion for improvement": "Mám nápad na zlepšení",
+  "I have": "mám",
+  "IT department": "Oddělení IT",
+  "Maintenance department": "Oddělení údržby",
+  "Idea": "Nápad",
+  "If you register, you will not have to re-enter your personal information and you will see the history of your requests.": "Pokud se zaregistrujete, nebudete muset opětovně zadávat osobní údaje a uvidíte historii svých požadavků.",
+  "Improvement": "Zepšení",
+  "Issue": "Problém",
+  "Login": "Přihlásit",
+  "Logout": "Odhlásit",
+  "Tickets": "Tikety",
+  "Name": "Jméno",
+  "Password confirmation": "Potvrzení hesla",
+  "Password": "Heslo",
+  "Personal Number": "Osobní číslo",
+  "Personal number": "Osobní číslo",
+  "Phone": "Telefon",
+  "Printer IN": "Inv.č. Tiskárny",
+  "Printer": "Tiskárna",
+  "Profile": "Profil",
+  "Register": "Registrovat",
+  "Roles": "Role",
+  "Select the fault type": "Vyberte typ závady",
+  "Send": "Odeslat",
+  "Show": "Zobrazit",
+  "Ticket": "Servisní požadavek",
+  "Title": "Předmět",
+  "Update": "Aktualizovat",
+  "Updated": "Aktualizováno",
+  "Updated At": "Aktualizováno",
+  "Users": "Uživatelé",
+  "Water": "Voda",
+  "administrator of hospital resources": "správce nemocničních prostředků",
+  "cleaning service": "úklidové služby",
+  "computer": "počítačem",
+  "for improvement": "na zlepšení",
+  "for": "na",
+  "maintenance": "oddělení údržby",
+  "Medical device manager": "Správce zrav. prostředků",
+  "printer": "tiskárna",
+  "New employee": "Nový zaměstnanec",
+  "Employee rights": "Přístupová práva"
 }
