--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -1,5 +1,6 @@
 {
   "Access denied": "Přístup zamítnut",
+  "Access denied Personal Admin Only": "Přístup zamítnut pouze pro Personalisty",
   "Are you sure ?": "Jste si jistý",
   "Back": "Zpět",
   "Close": "Zavřít",
@@ -11,44 +12,52 @@
   "Dashboard": "Hlavní panel",
   "Delete": "Odstranit",
   "Deleted": "Odstraněno",
+  "Department": "Oddělení",
   "Edit": "Upravit",
   "Electro": "Elektro",
   "Email address": "Emailová adresa",
   "Email": "Emailová adresa",
   "Fault type": "Typ závady",
+  "First name": "Jméno",
+  "Function": "Funkce",
   "Suggestion for improvement": "Mám nápad na zlepšení",
-  "I have": "mám",
-  "IT department": "Oddělení IT",
+  "I have an idea for improvement": "Mám nápad na zlepšení",
+  "IT department": "oddělení IT",
   "Maintenance department": "Oddělení údržby",
   "Idea": "Nápad",
   "If you register, you will not have to re-enter your personal information and you will see the history of your requests.": "Pokud se zaregistrujete, nebudete muset opětovně zadávat osobní údaje a uvidíte historii svých požadavků.",
   "Improvement": "Zepšení",
   "Issue": "Problém",
+  "Last name": "Příjmení",
   "Login": "Přihlásit",
   "Logout": "Odhlásit",
   "Tickets": "Tikety",
+  "maintenance department": "oddělení údržby",
   "Name": "Jméno",
+  "New Employee": "Nový zaměstnanec",
   "Password confirmation": "Potvrzení hesla",
   "Password": "Heslo",
-  "Personal Number": "Osobní číslo",
+  "Permissions": "Práva",
   "Personal number": "Osobní číslo",
   "Phone": "Telefon",
-  "Printer IN": "Inv.č. Tiskárny",
-  "Printer": "Tiskárna",
   "Profile": "Profil",
   "Register": "Registrovat",
   "Roles": "Role",
-  "Select the fault type": "Vyberte typ závady",
+  "Select department": "Vyberte oddělení",
+  "Select function": "Vyberte funkci",
+  "Select program": "Vyberte program",
   "Send": "Odeslat",
   "Show": "Zobrazit",
   "Ticket": "Servisní požadavek",
   "Title": "Předmět",
+  "Title preffix": "Titul před",
+  "Title suffix": "Titul za",
   "Update": "Aktualizovat",
   "Updated": "Aktualizováno",
   "Updated At": "Aktualizováno",
   "Users": "Uživatelé",
   "Water": "Voda",
-  "administrator of hospital resources": "správce nemocničních prostředků",
+  "administrator of hospital resources": "správce zdravotnických prostředků",
   "cleaning service": "úklidové služby",
   "computer": "počítačem",
   "for improvement": "na zlepšení",
