Update Eloquent Ticket relationships

--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -7,6 +7,7 @@
   "Computer ID": "ID počítače",
   "Computer": "Počítač",
   "Create": "Vytvořit",
+  "Create ticket": "Vytvořit požadavek",
   "Created": "Vytvořeno",
   "Created At": "Vytvořeno",
   "Dashboard": "Hlavní panel",
@@ -33,6 +34,7 @@
   "Logout": "Odhlásit",
   "Tickets": "Tikety",
   "maintenance department": "oddělení údržby",
+  "My Tickets": "Mé požadavky",
   "Name": "Jméno",
   "New Employee": "Nový zaměstnanec",
   "Password confirmation": "Potvrzení hesla",
