--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -6,6 +6,8 @@
   "Close": "Zavřít",
   "Computer ID": "ID počítače",
   "Computer": "Počítač",
+  "Coffee": "Káva",
+  "Catering": "Strava",
   "Create": "Vytvořit",
   "Create ticket": "Vytvořit požadavek",
   "Created": "Vytvořeno",
@@ -18,13 +20,14 @@
   "Electro": "Elektro",
   "Email address": "Emailová adresa",
   "Email": "Emailová adresa",
+  "Employment": "Pracovní poměr",
   "Fault type": "Typ závady",
   "First name": "Jméno",
   "Function": "Funkce",
-  "Suggestion for improvement": "Mám nápad na zlepšení",
+  "Suggestion for improvement": "nápad na zlepšení",
   "I have an idea for improvement": "Mám nápad na zlepšení",
   "IT department": "oddělení IT",
-  "Maintenance department": "Oddělení údržby",
+  "Maintenance department": "oddělení údržby",
   "Idea": "Nápad",
   "If you register, you will not have to re-enter your personal information and you will see the history of your requests.": "Pokud se zaregistrujete, nebudete muset opětovně zadávat osobní údaje a uvidíte historii svých požadavků.",
   "Improvement": "Zepšení",
@@ -65,8 +68,8 @@
   "for improvement": "na zlepšení",
   "for": "na",
   "maintenance": "oddělení údržby",
-  "Medical device manager": "Správce zrav. prostředků",
+  "Medical device manager": "správce zrav. prostředků",
   "printer": "tiskárna",
-  "New employee": "Nový zaměstnanec",
-  "Employee rights": "Přístupová práva"
+  "New employee": "nový zaměstnanec",
+  "Employee rights": "přístupová práva"
 }
